--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "engine.io": "~0.6.3",
     "express": "~3.3.4",
     "mecab-ffi": "0.0.8",
-    "node-dev": "~2.0.2"
+    "node-dev": "~2.0.2",
+    "opener": "~1.3.0"
   }
 }
